<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pipes</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="action_settings">Settings</string>
    <string name="listDBactivity">Listi yfir loka</string>
    <string name="deleteDBactivity">Eyða úr lista</string>
    <string name="addDBactivity">Bæta í lista</string>
    <string name="changeDBactivity">Breyta línu</string>
    <string name="map">Kort</string>
    <string name="about">Um pipes</string>
    <string name="database">Gagnagrunnur</string>
    <string name="data">Upplýsingar um loka</string>
    <string name="info">Vinsamlegast veljið þær upplýsingar sem þið viljið sjá</string>
    <string name="paint">Teikna</string>
    <string name="mapMotion">Hreyfa kort</string>
    <string name="save">Vista</string>
    <string name="clear">Hreinsa</string>
    <string name="about_text">Útgáfa 1.0\n\n Höfundar: \n\n Benedikt Sævarsson \n\n Helga Sigríður Ívarsdóttir \n\n Katrín Elíasdóttir \n\n Kristrún Harpa Gunnarsdóttir</string>

    <string name="findValve">Leit eftir loka</string>
    <string name="findValveText">Veldu loka og það byrtast öll heimilisföng sem er tengd honum</string>
    <string name="findAddress">Leit eftir heimilisfangi</string>
    <string name="findAddressText">Veldu heimilisfang og það kemur upp hvaða loki er tengdur því</string>
    <string name="showData">Birta öll gögn</string>
    <string name="hotWater">Heitt vatn</string>
    <string name="coldWater">Kalt vatn</string>
    <string name="sewage">Skolp</string>

    <string name="title_activity_map">Kort</string>
    <string name="title_activity_about">Um Pipes</string>
    <string name="title_activity_data">Upplýsingar um loka</string>
    <string name="title_activity_database">Gagnagrunnur</string>
    <string name="cancel">Hætta við</string>
    <string name="Type">Gerð loka</string>
    <string name="Area">Svæði</string>
    <string name="Number">Númer</string>
    <string name="Location">Staðsetning</string>
    <string name="Source">Brunnur</string>
    <string name="Comment">Athugasemd</string>
    <string name="title_activity_info_choice">InfoChoice</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_area">Area</string>
    <string name="title_activity_address">Address</string>

    <string-array name="Areas">
        <item>Svæði 1</item>
        <item>Svæði 2</item>
        <item>Svæði 3</item>
        <item>Svæði 4</item>
        <item>Svæði 5</item>
        <item>Svæði 6</item>
        <item>Svæði 7</item>
        <item>Svæði 8</item>
        <item>Svæði 9</item>
    </string-array>

</resources>
